--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ markdown: kramdown
 highlighter: null
 safe: false
 permalink: /blog/post/:title.html
+paginate: 5
+paginate_path: "page:num"
 
 exclude:
   - README.md
