--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navigation:
 - text: Home
   url: /
 - text: Blog
-  url: /blog/
+  url: /blog/index.html
 - text: Archive
   url: /archive/
 - text: About
